# courtlistener-mcp

./: .gitignore  README.md  pyproject.toml
opinion_browser/: app.js  index.html  styles.css
src/courtlistener_mcp/: __init__.py  client.py  server.py  tools.py
